page name uupdated

--- a/programming.html
+++ b/programming.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="About | Ismail Hossain">
   <meta property="og:image" content="images/profile2.jpg">
   <meta property="og:description" content="#">
-  <title>Publication | Ismail Hossain</title>
+  <title>Programming | Ismail Hossain</title>
 
     <!-- Bootstrap 4 CSS. This is for the alpha 3 release of Bootstrap 4. This should be updated when Bootstrap 4 is officially released. -->
    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
