email id upated

--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                      <br><i class="fa fa-phone" aria-hidden="true"></i> (773) 355-9699 -->
                      <br>
                      <br><i class="fa fa-envelope" aria-hidden="true"></i> <a
-                        href="https://www2.cs.siu.edu/~stalukder/mailto:ismail.hossain@siu.edu">ismail.hossain@siu.edu</a>
+                        href="https://www2.cs.siu.edu/~stalukder/mailto:ihossain@miners.utep.edu">ihossain@miners.utep.edu</a>
                      <br><i class="fa fa-file" aria-hidden="true"></i> <a href="CV_Ismail_Hossain.pdf">Curriculum
                         Vitae</a>
                   </div>
