--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          border: 1px solid #ddd;
       }
    </style>
-
+   <script src="scripts/index.js"></script>
 </head>
 
 <body>
@@ -262,175 +262,17 @@
             <div class="table-wrapper">
                <table class="table table-hover">
                   <thead>
-                     <tr style="font-size: 12px;">
-                        <th scope="col">#</th>
-                        <th scope="col">Paper Title</th>
-                        <th scope="col">Link</th>
-                        <th scope="col">Publisher</th>
-                     </tr>
+                      <tr style="font-size: 12px;">
+                          <th scope="col">#</th>
+                          <th scope="col">Paper Title</th>
+                          <th scope="col">Link</th>
+                          <th scope="col">Publisher</th>
+                      </tr>
                   </thead>
-                  <tbody>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">C</th>
-
-                        <td>SocFedGPT: Federated GPT-based Adaptive Content Filtering System Leveraging
-                           User Interactions in Social Networks</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">W</th>
-
-                        <td>Bangla Emotion Detection Dataset With An Extended Taxonomy And Its
-                           Evaluation</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">W</th>
-
-                        <td>FLASH: Federated Learning-Based LLMs for Advanced Query Processing in Social
-                           Networks through RAG</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">W</th>
-
-                        <td>4WHContext: A Context Based Hate Speech Detection Framework From Social Media
-                           Posts</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">W</th>
-
-                        <td>Combating Echo Chambers In Online Social Network By Increasing Content
-                           Diversity In Recommendation</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">W</th>
-
-                        <td>CAMERA: Context Based Emotion Detection Framework And Its
-                           Evaluation</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-
-                     <tr style="font-size: 12px;">
-                        <th scope="row">W</th>
-                        <td>EVOLVE: Predicting User Evolution and Network Dynamics in Social Media Using Fine-Tuned
-                           GPT-like Model</td>
-                        <td><a href="https://arxiv.org/abs/2407.09691">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">W</th>
-
-                        <td>SocialRec: User Activity Based Post Weighted Dynamic Personalized Post Recommendation System
-                           in Social Media</td>
-                        <td><a href="https://arxiv.org/abs/2407.09747">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">B</th>
-
-                        <td>Recommendation System: History, Present and Future</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Arxiv</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">B</th>
-
-                        <td>Blockchain-Integrated Secure Framework for Enhanced E-Government Services</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">J</th>
-
-                        <td>Enhancing the Cybersecurity of Advanced Nuclear Power Plants through Generative AI and Large
-                           Language Models</td>
-                        <td><a href="#">Link</a></td>
-                        <td>IEEE</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">J</th>
-
-                        <td>Natural Language Processing for Predictive Maintenance in Nuclear Power Plant: Digital Twin
-                           Context</td>
-                        <td><a href="#">Link</a></td>
-                        <td>IEEE</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">B</th>
-
-                        <td>AutoML Systems For Medical Imaging</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">A</th>
-
-                        <td>A Novel Hierarchical Federated Learning with Self-Regulated Decentralized Clustering</td>
-                        <td><a href="#">Link</a></td>
-                        <td>ACM</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">C</th>
-
-                        <td>Machine Learning and Sentiment Analysis for Predicting Environmental Lead Toxicity in
-                           Children at the ZIP Code Level</td>
-                        <td><a href="#">Link</a></td>
-                        <td>IEEE</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">A</th>
-
-                        <td>Prediction of Childhood and Pregnancy Lead Poisoning Using Deep Learning</td>
-                        <td><a href="#">Link</a></td>
-                        <td>ACM</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">A</th>
-
-                        <td>Federated Learning-based Contraband Detection within Airport Baggage X-Rays</td>
-                        <td><a href="#">Link</a></td>
-                        <td>ACM</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">B</th>
-
-                        <td>Active learning on medical image</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">C</th>
-
-                        <td>Towards Federated Learning Based Contraband Detection Within Airport Baggage X-Rays</td>
-                        <td><a href="#">Link</a></td>
-                        <td>IEEE</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">C</th>
-
-                        <td>Collaborative Differentially Private Federated Learning Framework for the Prediction of
-                           Diabetic Retinopathy</td>
-                        <td><a href="#">Link</a></td>
-                        <td>IEEE</td>
-                     </tr>
-                     <tr style="font-size: 12px;">
-                        <th scope="row">B</th>
-
-                        <td>Introduction of Medical Imaging Modalities</td>
-                        <td><a href="#">Link</a></td>
-                        <td>Springer</td>
-                     </tr>
+                  <tbody id="table-publications">
+                      <!-- Rows will be dynamically inserted here -->
                   </tbody>
-               </table>
+              </table>
             </div>
             <h5>Research Domain Interests</h5>
             <ul class="ul-dates">
