deleted static data

--- a/index.html
+++ b/index.html
@@ -312,178 +312,7 @@
          <div class="col-md-3 col-xs-8">
             <h5>UPDATES</h5>
             <div class="overflow-auto p-3 bg-body-tertiary" style="max-height: 800px;">
-               <div class="list-group" style="font-size: 12px;">
-                  <!-- <a href="#"
-                     class="list-group-item list-group-item-action flex-column align-items-start active">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">Started PhD in University of Texas at El Paso</h6>
-                     </div>
-                     <p class="mb-1">My Professor joined the CS Faculty at UTEP along with his PhD students.</p>
-                     <div>
-                        <span class="badge badge-success">SUPREME LAB</span>
-                        <span class="badge badge-primary">UTEP</span>
-                     </div>
-                  </a>
-                  <a href="#"
-                     class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">ICWSM'24 Student Travel Award</h6>
-                     </div>
-                     <p class="mb-1">I have received $1300, ICWSM Student Travel Award.</p>
-                     <div>
-                        <span class="badge badge-success">ICWSM</span>
-                        <span class="badge badge-primary">Conference</span>
-                     </div>
-                  </a>
-                  <a href="https://ieeecompsac.computer.org/2024/"
-                     class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">ASONAM 2024</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Six of our papers got accepted in Spring ASONAM 2024, one of the top-tier
-                        conferences in social network analysis.</p>
-                     <div>
-                        <span class="badge badge-success">Accepted</span>
-                        <span class="badge badge-primary">Springer</span>
-                     </div>
-                  </a>
-                  <a href="https://ieeecompsac.computer.org/2024/"
-                     class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">COMPSAC 2024</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Four of our papers got accepted in IEEE COMPSAC 2024, one of the top-tier
-                        conferences in social network analysis.</p>
-                     <div>
-                        <span class="badge badge-success">Accepted</span>
-                        <span class="badge badge-primary">IEEE</span>
-                     </div>
-                  </a>
-                  <a href="https://www.icwsm.org/2024/index.html/"
-                     class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">ICWSM'24 AAAI</h6>
-                        <small>June 3-6, 2024</small>
-                     </div>
-                     <p class="mb-1">THE 18TH INTERNATIONAL
-                        AAAI CONFERENCE
-                        ON WEB AND SOCIAL MEDIA</p>
-                     <small><span class="material-icons">
-                           <img src="images/icons/location_on_20dp.svg" alt="" />
-                        </span>Buffalo, New York, USA.</small>
-                     <div>
-                        <span class="badge badge-primary">Conference</span>
-                        <span class="badge badge-secondary">ICWSM</span>
-                        <span class="badge badge-success">AAAI</span>
-                     </div>
-                  </a>
-                  <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2023/"
-                     class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">CyberForce 2023</h6>
-                        <small>Oct 16-Nov 03, 2023</small>
-                     </div>
-                     <p class="mb-1">DOE CyberForce Competition® 2023</p>
-                     <small><span class="material-icons">
-                           <img src="images/icons/location_on_20dp.svg" alt="" />
-                        </span>St. Charles, Illinois, USA.</small>
-                     <div>
-                        <span class="badge badge-primary">Competition</span>
-                     </div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">ACM/IEEE ASONAM 2023</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Three of our papers got accepted in ACM/IEEE ASONAM 2023, one of the top-tier
-                        conferences in social network analysis.</p>
-                     <div>
-                        <span class="badge badge-success">Published</span>
-                        <span class="badge badge-primary">IEEE</span>
-                        <span class="badge badge-secondary">ACM</span>
-                     </div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">Data-driven approaches to Medical Imaging</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Seven of our book chapters got published in the book "Data-driven approaches to
-                        Medical Imaging" by Springer.</p>
-                     <div>
-                        <span class="badge badge-success">Published</span>
-                        <span class="badge badge-primary">Springer</span>
-                     </div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">Expert Opinion on Cybersecurity and Ransomware</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Our Professor Dr. Sajedul Talukder was contacted by KMOV (Channel 4), a prominent
-                        television station in St. Louis, Missouri, affiliated with CBS and MyNetworkTV to provide expert
-                        opinion on cybersecurity and ransomware.</p>
-                     <small><span class="material-icons">
-                           <img src="images/icons/location_on_20dp.svg" alt="" />
-                        </span>St. Louis, Missouri, USA.</small>
-                     <div>
-                        <span class="badge badge-danger">TV Interview</span>
-                     </div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">ANS Transactions</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Two papers published in ANS Transactions in ANS Winter Conference and Expo 2023.
-                     </p>
-                     <div>
-                        <span class="badge badge-success">Published</span>
-                     </div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">IEEE ICAIC 2023</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Two papers published in IEEE International Conference on AI in Cybersecurity (ICAIC
-                        2023).</p>
-                     <div>
-                        <span class="badge badge-success">Published</span>
-                        <span class="badge badge-primary">IEEE</span>
-                     </div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">Blockchain and Smart-Contract Technologies</h6>
-                        <small></small>
-                     </div>
-                     <p class="mb-1">Two book chapters published in the book "Blockchain and Smart-Contract Technologies
-                        for Innovative Applications" by Springer.</p>
-                     <div>
-                        <span class="badge badge-success">Published</span>
-                        <span class="badge badge-primary">Springer</span>
-                     </div>
-                  </a>
-                  <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2022/"
-                     class="list-group-item list-group-item-action flex-column align-items-start">
-                     <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1">CyberForce 2022</h6>
-                        <small>Oct 20-Nov 07, 2022</small>
-                     </div>
-                     <p class="mb-1">DOE CyberForce Competition® 2022</p>
-                     <small><span class="material-icons">
-                           <img src="images/icons/location_on_20dp.svg" alt="" />
-                        </span>Virtual
-                     </small>
-                     <div>
-                        <span class="badge badge-primary">Competition</span>
-                        <span class="badge badge-success">Rank: 16th</span>
-                     </div>
-                  </a> -->
+               <div class="list-group" style="font-size: 12px;"> -->
                </div>
             </div>
          </div>
