--- a/index.html
+++ b/index.html
@@ -152,80 +152,8 @@
          <!-- Center Column -->
          <div class="col-md-6 col-xs-5">
             <div id="carouselExampleControls" class="carousel slide border border-secondary" data-ride="carousel">
-               <div class="carousel-inner">
-                  <div class="carousel-item active">
-                     <img class="d-block w-100 slider-img" src="images/figures/18.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/21.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/22.png" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/23.png" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/24.png" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/17.png" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/13.svg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/14.svg" alt="Third slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/15.svg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/19.png" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/20.png" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/16.png" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/1.svg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/2.svg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/3.svg" alt="Third slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/4.svg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/5.svg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/6.svg" alt="Third slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/7.svg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/8.svg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/9.svg" alt="Third slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/10.svg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/11.svg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/12.svg" alt="Third slide">
-                  </div>
-               </div>
+               <div class="carousel-inner" id="carousel-container"></div>
+               
                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
